src/objects/WGUStudentNote__c.object
<CustomObject>
    <description>This object stores notes about a student&apos;s interaction with service personnel such as mentors, etc.</description>
    <fields>
        <fullName>AuthorIsCourseMentor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The author of this message was a course mentor when the note was created.</description>
        <inlineHelpText>The author of this message was a course mentor when the note was created.</inlineHelpText>
        <label>Author is Course Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuthorPidm__c</fullName>
        <label>Author Pidm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user pidm</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WGUStudentNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InteractionID__c</fullName>
        <description>This is the interacitonId in talisma that this note came from.</description>
        <externalId>true</externalId>
        <label>InteractionID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level1Image__c</fullName>
        <formula>&apos; &apos;</formula>
        <label>Level 1 Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorId__c</fullName>
        <formula>Student__r.StudentMentor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MentorId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <externalId>true</externalId>
        <label>PIDM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalizationActions__c</fullName>
        <description>These actions are for the Student Personalization project and are for mentors to communicate how they are helping a student if the Student At Risk Score is Red or Yellow</description>
        <inlineHelpText>Enter in the action for this student if they are an At Risk Student.</inlineHelpText>
        <label>Personalization Actions</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create an entire term plan with weekly progress goals that allow the student to achieve OTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enroll the student in a cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When the student fails to achieve the weekly goal, set a follow up call later in the week or the day to provide time for them to accomplish the goal that week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create a study calendar with specific times blocked out for schoolwork and ask the student to share it with his or her family/support system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask questions to determine if the student is struggling with the content, time management, or motivation. Then set a follow up appointment with an additional person (course mentor, student success mentor, etc.) based upon the student’s response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share screens with the student and walk through a learning resource or task together</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share screens and watch a welcome video together then create a plan for finishing the course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When a goal is achieved, discuss what actions the student took to achieve that goal and look for ways to replicate those actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review communities with the students and search out tips and information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share screens and watch a clip of a graduation speaker and then craft a graduation goal and plan for achieving that goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use questions in the course of study to quiz the student. Set up a course mentor appointment to further discuss the topic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonalizationMenuSubType__c</fullName>
        <description>Sub-type of Personalization menu.</description>
        <label>PersonalizationMenuSubType</label>
        <picklist>
            <controllingField>PersonalizationMenu__c</controllingField>
            <picklistValues>
                <fullName>Provide information on WellConnect as a resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create a revised term plan with weekly goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask questions to determine student’s motivation and ability to continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit the student’s vision statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help the student identify a personal support system for academic accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help the student connect with the bursar or financial aid support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set a follow up call if the student does not achieve a weekly goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send a follow up email if the student does not achieve a weekly goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit the student’s study calendar identifying specific study times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask the student to share a study calendar with his/her support system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss actions the student took when a goal is achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch a clip of a graduation speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set a graduation goal with a plan for achieving that goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set an appointment with the student success center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set a one on one appointment with a course mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitate enrollment of the student in a cohort/bootcamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find and discuss a relevant webinar for the student to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quiz the student on topics in the course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk through a learning resource (preferably with screen sharing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss student’s understanding of task directions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss student’s understanding of grader feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch course videos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk through the community together (preferably with screen sharing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitate an appointment with the writing center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner with another department on the problem (I.T., assessment, bursar, records, learning resources, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review TaskStream functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review the student portal functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide help on using a course of study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide help on using a learning resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonalizationMenu__c</fullName>
        <description>Categories of personalization : Personal, Motivational, Academic, Technical.</description>
        <inlineHelpText>Categories of personalization : Personal, Motivational, Academic, Technical.</inlineHelpText>
        <label>PersonalizationMenu</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShortText__c</fullName>
        <description>Field to store a portion of the Text__c field data in plain text</description>
        <label>ShortText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentRiskValue__c</fullName>
        <description>The risk score (0~3) of this student when this note created.</description>
        <label>StudentRiskValue</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>The contact record for this student</description>
        <inlineHelpText>The student associated with this note.</inlineHelpText>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>WGUStudentNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Note Sub Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>AAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration Teaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess Attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Academic Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goals and Tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student On-Boarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Information on Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Information on Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Non-Academic Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminded Student of Inactive Protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a Return Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded to a Community Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a Phone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested an Appointment Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested an Email Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveySelector__c</fullName>
        <description>This fields uses a formula to decide whether or not this interaction should generate a mentor course survey.</description>
        <formula>IF( AND(MOD( Student__r.NumberOfCourseMentorNotes__c ,10) =0, 
NULLVALUE( Student__r.LastMentorSurvey__c , TODAY()-60) &lt; TODAY() -30, 
NOT(ISPICKVAL(Type__c, &apos;Administration (MGR only)&apos;))), 
&apos;Y&apos;,&apos;N&apos;)</formula>
        <inlineHelpText>This fields uses a formula to decide whether or not this interaction should generate a mentor course survey.</inlineHelpText>
        <label>Survey Selector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if a survey was sent to the student contact from this note interaction (checked = survey was sent).</description>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>The basic rich text area for details of this note</description>
        <inlineHelpText>Please enter any details for this note.</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Level 1 Note Type</description>
        <inlineHelpText>This note type.</inlineHelpText>
        <label>Note Type</label>
        <picklist>
            <picklistValues>
                <fullName>Live Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Message (IM) / Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar Attendance Noted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach (CM only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration (MGR only)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGUCreationDateTime__c</fullName>
        <description>This holds the date time stamp of a note.</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <label>WGU Student Note</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGUStudentNotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>